# projet_etudes_data

./: .env  .gitignore  .pre-commit-config.yaml  .yamllint  DAT.docx  DAT.md  Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.docs  Dockerfile.streamlit  Makefile  README.md  contributing.md  data.csv  docker-compose.yml  keygen.py  mkdocs.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
airflow/: airflow.cfg
airflow/dags/: run_get_posts.py
conf/: nginx.conf  prometheus.yml
conf/base/: catalog.yml  parameters_emotion_classification.yml  parameters_ingest_from_bluesky.yml  parameters_model_training.yml  parameters_nlp_transform.yml  parameters_train_finetuned.yml  parameters_vectorisation.yml
dags/: dag_emotion_classification.py  dag_ingest_from_bluesky.py  dag_nlp_transform.py  dag_train_finetuned.py  dag_train_reliability.py  dag_vectorisation.py  kedro_operator.py  projet_etudes_airflow_dag.py
data/06_models/: kmeans_model.pkl  tfidf_vectorizer.pkl
docker/: docker-compose.yml
docs/: gantt.md
projet-etudes/: README.md  pyproject.toml
shared/: claude_cli_service.py  claude_service.py  embedding_service.py  emotion_inference_service.py  energy_service.py  finetuned_service.py  gemini_service.py  kmeans_service.py  llm_interface.py  lstm_service.py  metrics.py  mongo.py  ollama_service.py  rag.py  reliability_service.py
src/api/: api.py
src/projet_etudes/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
tests/: mongo_test.py  test_run.py
(+37 files in other folders)
