[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-learn"
version = "0.1.0"
dependencies = [
  "pandas",
  "matplotlib",
  "pydantic",
  "numpy",
  "typer",
  "kedro",
  "atproto",
  "dotenv",
  "pymongo"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
]